Fix tab spacing/borders

--- a/src/main/assets/styles/site.less
+++ b/src/main/assets/styles/site.less
@@ -6,6 +6,16 @@ body {
   padding-top: 60px;
 }
 
+.nav.nav-tabs {
+  margin-bottom: 0px;
+}
+
+.tab-content .tab-pane {
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+}
+
 .navbar .brand {
   padding: 5px 20px 5px;
 }
